core/include/kryon_canvas.h

// ============================================================================
// Enhanced Canvas System - Love2D Inspired API
// ============================================================================

// Drawing modes for shapes
typedef enum {
    KRYON_DRAW_FILL = 0,   // Fill the shape
    KRYON_DRAW_LINE = 1    // Draw outline only
} kryon_draw_mode_t;
// Line styles
typedef enum {
    KRYON_LINE_SOLID = 0,
    KRYON_LINE_ROUGH = 1,
    KRYON_LINE_SMOOTH = 2
} kryon_line_style_t;
// Line join styles
typedef enum {
    KRYON_LINE_JOIN_MITER = 0,
    KRYON_LINE_JOIN_BEVEL = 1,
    KRYON_LINE_JOIN_ROUND = 2
} kryon_line_join_t;
// Blend modes
typedef enum {
    KRYON_BLEND_ALPHA = 0,        // Standard alpha blending
    KRYON_BLEND_ADDITIVE = 1,     // Additive blending
    KRYON_BLEND_MULTIPLY = 2,     // Multiplicative blending
    KRYON_BLEND_SUBTRACT = 3,     // Subtractive blending
    KRYON_BLEND_SCREEN = 4,       // Screen blending
    KRYON_BLEND_REPLACE = 5       // Replace (no blending)
} kryon_blend_mode_t;
// ============================================================================
// Canvas Lifecycle and State Management
// ============================================================================

// Initialize canvas system
void kryon_canvas_init(uint16_t width, uint16_t height);
// Shutdown canvas system
void kryon_canvas_shutdown(void);
// Resize canvas
void kryon_canvas_resize(uint16_t width, uint16_t height);
// Clear canvas with background color
void kryon_canvas_clear(void);
// Clear canvas with specific color
void kryon_canvas_clear_color(uint32_t color);
// ============================================================================
// Drawing State Management (Love2D Style)
// ============================================================================

// Color management
void kryon_canvas_set_color(uint32_t color);
void kryon_canvas_set_color_rgba(uint8_t r, uint8_t g, uint8_t b, uint8_t a);
void kryon_canvas_set_color_rgb(uint8_t r, uint8_t g, uint8_t b);
uint32_t kryon_canvas_get_color(void);
void kryon_canvas_set_background_color(uint32_t color);
void kryon_canvas_set_background_color_rgba(uint8_t r, uint8_t g, uint8_t b, uint8_t a);
// Line properties
void kryon_canvas_set_line_width(kryon_fp_t width);
kryon_fp_t kryon_canvas_get_line_width(void);
void kryon_canvas_set_line_style(kryon_line_style_t style);
kryon_line_style_t kryon_canvas_get_line_style(void);
void kryon_canvas_set_line_join(kryon_line_join_t join);
kryon_line_join_t kryon_canvas_get_line_join(void);
// Font management
void kryon_canvas_set_font(uint16_t font_id);
uint16_t kryon_canvas_get_font(void);
// Blend modes
void kryon_canvas_set_blend_mode(kryon_blend_mode_t mode);
kryon_blend_mode_t kryon_canvas_get_blend_mode(void);
// ============================================================================
// Transform System (Love2D Style)
// ============================================================================

// Matrix operations
void kryon_canvas_origin(void);
void kryon_canvas_translate(kryon_fp_t x, kryon_fp_t y);
void kryon_canvas_rotate(kryon_fp_t angle);
void kryon_canvas_scale(kryon_fp_t sx, kryon_fp_t sy);
void kryon_canvas_shear(kryon_fp_t kx, kryon_fp_t ky);
// Transform stack
void kryon_canvas_push(void);
void kryon_canvas_pop(void);
// ============================================================================
// Basic Drawing Primitives (Love2D Style)
// ============================================================================

// Rectangle drawing
void kryon_canvas_rectangle(kryon_draw_mode_t mode, kryon_fp_t x, kryon_fp_t y, kryon_fp_t width, kryon_fp_t height);
// Circle drawing
void kryon_canvas_circle(kryon_draw_mode_t mode, kryon_fp_t x, kryon_fp_t y, kryon_fp_t radius);
// Ellipse drawing
void kryon_canvas_ellipse(kryon_draw_mode_t mode, kryon_fp_t x, kryon_fp_t y, kryon_fp_t rx, kryon_fp_t ry);
// Polygon drawing
void kryon_canvas_polygon(kryon_draw_mode_t mode, const kryon_fp_t* vertices, uint16_t vertex_count);
// Line drawing
void kryon_canvas_line_points(const kryon_fp_t* points, uint16_t point_count);
void kryon_canvas_line(kryon_fp_t x1, kryon_fp_t y1, kryon_fp_t x2, kryon_fp_t y2);
// Point drawing
void kryon_canvas_point(kryon_fp_t x, kryon_fp_t y);
void kryon_canvas_points(const kryon_fp_t* points, uint16_t point_count);
// Arc and sector drawing
void kryon_canvas_arc(kryon_draw_mode_t mode, kryon_fp_t cx, kryon_fp_t cy, kryon_fp_t radius,
                     kryon_fp_t start_angle, kryon_fp_t end_angle);
// ============================================================================
// Text Rendering (Love2D Style)
// ============================================================================

// Basic text printing
void kryon_canvas_print(const char* text, kryon_fp_t x, kryon_fp_t y);
// Formatted text printing with wrapping and alignment
void kryon_canvas_printf(const char* text, kryon_fp_t x, kryon_fp_t y, kryon_fp_t wrap_limit, int32_t align);
// Text measurement
kryon_fp_t kryon_canvas_get_text_width(const char* text);
kryon_fp_t kryon_canvas_get_text_height(void);
kryon_fp_t kryon_canvas_get_font_size(void);
// ============================================================================
// Canvas Command Buffer Access
// ============================================================================

// Get the canvas command buffer for rendering
kryon_cmd_buf_t* kryon_canvas_get_command_buffer(void);